# mrrik-ai-bot

./: .env.example  .gitignore  MRRIK_AI_Bot_Architecture.md  README.md  config.yaml  docker-compose.yml  pyproject.toml
docs/: DEPLOYMENT_CHECKLIST.md  LIVE_CANARY.md  OPERATIONS.md  TESTNET_E2E.md
migrations/: env.py
scripts/: __init__.py  backup_postgres.py  count_signals.py  get_channel_id.py  healthcheck.py  live_canary_checklist.py  make_session.py  run_testnet_e2e.py  run_testnet_protective_e2e.py
services/: __init__.py
shared/: __init__.py  bus.py  config.py  crypto.py  health.py  logging.py  monitoring.py  rate_limit.py  retry.py
tests/: __init__.py  test_admin_panel_auth.py  test_admin_panel_events.py  test_admin_panel_explorers.py  test_admin_panel_precheck.py  test_admin_panel_repository.py  test_admin_panel_routes.py  test_backup_postgres.py  test_bus.py  test_config.py  test_core_engine_engine.py  test_core_engine_events.py  test_core_engine_ids.py  test_core_engine_lifecycle.py  test_core_engine_main_runtime.py  test_core_engine_orders.py  test_core_engine_reconciliation.py  test_core_engine_repository.py  test_core_engine_risk.py  test_core_engine_safety.py  test_core_engine_testnet.py  test_count_signals.py  test_db_migrations.py  test_db_models.py  test_demo_engine_engine.py  test_demo_engine_events.py  test_demo_engine_main_runtime.py  test_demo_engine_prices.py  test_demo_engine_repository.py  test_demo_engine_stats.py  test_demo_engine_trade_logic.py  test_exchange_client_contract.py  test_exchange_types.py  test_health.py  test_monitoring.py  (+22 more)
(+80 files in other folders)
