[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "mrrik-ai-bot"
version = "0.1.0"
description = "MRRIK AI bot service scaffold"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "pydantic>=2",
    "pydantic-settings>=2",
    "PyYAML>=6",
    "python-dotenv>=1",
    "SQLAlchemy>=2",
    "alembic>=1",
    "psycopg[binary]>=3",
    "redis>=5",
    "cryptography>=42",
    "APScheduler>=3",
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "aiogram>=3",
    "Telethon>=1",
    "websockets>=12",
    "binance-futures-connector>=4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "httpx2>=2.0.0",
    "ruff>=0.5",
    "mypy>=1",
    "types-PyYAML",
]

[tool.setuptools.packages.find]
include = ["shared*", "services*", "scripts*"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [".venv"]
